style.css
.section-1 {
    position: fixed;
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    filter: blur(0);
    z-index: -99;
    resize: both;
}

.music-section {
    flex-direction: row;
    width: 100%;
    height: 80px;
    position: absolute;
    display: flex;
    z-index: 1;
    background: rgba(0, 0, 0, 0.774);
    left: 0;
    top: 0;
}

.music-section div {
    position: relative;
    overflow: hidden;
    height: 50px;
}

.music-section .one {
    flex: 0.5 0.5 0%;
    height: 70px;
    width: 300px;
    margin-top: 10px;
    margin-left: 10px;
    margin-right: 95px;
}

.music-section .two {
    margin-top: 15px;
    flex: 0.5 0.5 0%;
    margin-right: 5px;
    margin-left: 500px;
    color: white;
    text-align: center;
    border: 2px solid white;
    border-radius: 0.8em;
}

.music-section .three {
    margin-top: 15px;
    flex: 0.5 0.5 0%;
    margin-right: 5px;
    margin-left: 5px;
    color: white;
    text-align: center;
    border: 2px solid white;
    border-radius: 0.8em;
}

.music-section .four {
    margin-top: 15px;
    width: 50px;
    flex: 0.5 0.5 0%;
    margin-right: 5px;
    margin-left: 5px;
    color: white;
    text-align: center;
    border: 2px solid white;
    border-radius: 0.8em;
}

.music-section .five {
    margin-top: 15px;
    margin-right: 10px;
}

.music-section .two:hover {
    background-color: rgba(255, 255, 255, 0.336);
}

.music-section .three:hover {
    background-color: rgba(255, 255, 255, 0.336);
}

.music-section .four:hover {
    background-color: rgba(255, 255, 255, 0.336);
}

.music-section .five:hover {
    background-color: rgba(255, 255, 255, 0.336);
    border-radius: 10px;
}

.section-2 {
    display: flex;
}

/*.section-2 div {
    margin-top: 200px;
    position: relative;
    height: 500px;
    background-color: black;
    width: 500px;
    border: 4px solid black;
    opacity: 80%;
}

.section-2 .one {
    flex: 1 1 0%;
    margin-left: 20px;
    margin-right: 250px;
}

.section-2 .two {
    flex: 1 1 0%;
    margin-left: 250px;
    margin-right: 20px;
}
*/

.emblem-container {
    display: flex;
    position: relative;
    height: 100%;
    width: 99%;
    top: 1.5em;
    overflow: hidden;
    padding-bottom: 0;
    resize: both;
    z-index: -50;
    filter: drop-shadow(2px 2px 4px rgb(255, 255, 255));
    justify-content: center;
}

.raiden-img {
    display: flex;
    position: relative;
    width: 80%;
    height: 80%;
    margin-top: -80vh;
    overflow: hidden;
    z-index: 2;
}

.emblem-img:hover {
    filter: brightness(1.2);
}

.section-3 {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 100%;
    left: 0;
    overflow: hidden;
    z-index: 1;
    resize: both;
}

.section-4 {
    position: relative;
    font-style: italic;
    height: 180px;
    top: 30vh;
    z-index: 3;
    color: white;
    text-align: center;
    display: flex; 
    justify-content: center;
    padding-left: 20%;
    padding-right: 20%;
}

h2 {
    background: rgba(0, 0, 0, 0.726);
    filter: brightness(1.2);
    border-radius: 12.5px;
    padding: 10px;
    padding-bottom: 0;
}

@media (max-width: 1500px) {
    h2 {
        top: 0vh;
        height: 300px;
        width: 300px;
        overflow: hidden;
    }

    .section-1 {
        position: fixed;
        width: 90vw;
        height: 90vh;
        top: 0;
        left: 0;
        filter: blur(0);
        z-index: -99;
    }

    .raiden-img {
        top: 30vh;
    }

    .emblem-container {
        height: 50em;
    }
}

@media (max-width: 1919px) {
    .music-section .one {
        margin-right: 5px;
    }

    .music-section .two {
        margin-top: 15px;
        flex: 0.5 0.5 0%;
        margin-right: 1px;
        margin-left: 1px;
    }

    h2 {
        font-size: 1.4em;
    }
}

@media (max-width: 1100px) {
    .raiden-img {
        top: 50vh;
    }

    h2 {
        top: 1000px;
    }
}

@media (max-width: 940px) {
    .raiden-img {
        height: 100%;
        width: 100%;
    }

    h2 {
        font-size: 1.27em;
        margin-top: 30vh;
    }

    .emblem-container {
        height: 40em;
    }
}

@media (max-width: 860px) {
    .emblem-container {
        height: 40em;
        top: 10em;
    }

    .raiden-img {
        top: 90vh;
    }

    h2 {
        margin-top: 50vh;
    }
}
@media (max-width: 700px) {
    .emblem-container {
        height: 30em;
    }

    h2 {
        font-size: 0.90em;
    }
}

@media (max-width: 400px) {
    .emblem-container {
        height: 20em;
    }
}

